--- a/manifest.json
+++ b/manifest.json
@@ -2,9 +2,11 @@
     {
         "url": "https://github.com/webboyt/Velox-Modpack/",
 		"name": "Velox Modpack"
+		"id": 0
     },
     {
         "url": "test",
-		"name": "Velox Modpack"
+		"name": "Velox Modpack1"
+		"id": 1
     }
 ]
