--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,12 @@
 [
     {
         "url": "https://github.com/webboyt/Velox-Modpack/",
-		"name": "Velox Modpack"
+		"name": "Velox Modpack",
 		"id": 0
     },
     {
         "url": "test",
-		"name": "Velox Modpack1"
+		"name": "Velox Modpack1",
 		"id": 1
     }
 ]
