--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
 		"id": 1
     },
     {
-        "url": "https://github.com/webboyt/velox-1.18-modpack",
+        "url": "https://github.com/webboyt/velox-1.18-modpack/",
 		"name": "Velox 1.18.2 Modpack",
 		"id": 1
     }
