--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,7 @@
 		"id": 1
     },
     {
-        "url": "https://github.com/webboyt/Velox-1.19.2-Modpack",
+        "url": "https://github.com/webboyt/Velox-1.19.2-Modpack/",
 		"name": "Velox 1.19.2 Modpack",
 		"id": 2
     }
