--- a/manifest.json
+++ b/manifest.json
@@ -18,5 +18,10 @@
         "url": "https://github.com/webboyt/Velox-1.19.2-Modpack/",
 		"name": "Velox 1.19.2 Modpack",
 		"id": 2
+    },
+    {
+        "url": "https://github.com/webboyt/Nips-Modpack",
+		"name": "Nips Modpack",
+		"id": 3
     }
 ]
