--- a/manifest.json
+++ b/manifest.json
@@ -26,7 +26,7 @@
     },
     {
         "url": "https://github.com/webboyt/Velox-Pokemon-Modpack/",
-		"name": "Velox Pokemon Modpack",
+		"name": "Velox Pokemon Pack",
 		"id": 5
     },
     {
